feat: add is active in user creation and edit
