# src/modules/users/dtos/CreateUserDTO.ts
@@ -1,7 +1,6 @@
 export interface CreateUserDTO {
   name: string;
   email: string;
-  password: string;
   institution: string;
   isAdmin: boolean;
 }
