# src/modules/users/useCases/createUser/CreateUserController.ts
@@ -3,14 +3,13 @@ import { CreateUserUseCase } from "./CreateUserUseCase";
 
 export class CreateUserController {
   async handle(request: Request, response: Response): Promise<Response> {
-    const { name, email, password, institution, isAdmin } = request.body;
+    const { name, email, institution, isAdmin } = request.body;
 
     const createUserUseCase = new CreateUserUseCase();
 
     const result = await createUserUseCase.execute({
       name,
       email,
-      password,
       institution,
       isAdmin,
     });
